--- a/src/muxml_maker/muxml_maker.fsproj
+++ b/src/muxml_maker/muxml_maker.fsproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Include="Settings.fs" />
     <Compile Include="Dict.fs" />
-    <Compile Include="Convert.fs" />
+    <Compile Include="XmlFromLrc.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
   </ItemGroup>
