--- a/src/muxml_maker/muxml_maker.fsproj
+++ b/src/muxml_maker/muxml_maker.fsproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Util.fs" />
     <Compile Include="Settings.fs" />
     <Compile Include="Dict.fs" />
     <Compile Include="Converter.fs" />
