--- a/src/muxml_maker/muxml_maker.fsproj
+++ b/src/muxml_maker/muxml_maker.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="Settings.fs" />
     <Compile Include="Dict.fs" />
     <Compile Include="Converter.fs" />
+    <Compile Include="Parser.fs" />
     <Compile Include="XmlFromLrc.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
