--- a/src/muxml_maker/muxml_maker.fsproj
+++ b/src/muxml_maker/muxml_maker.fsproj
@@ -60,6 +60,7 @@
     <Compile Include="Settings.fs" />
     <Compile Include="Dict.fs" />
     <Compile Include="Lyrics.fs" />
+    <Compile Include="Parser.fs" />
     <Compile Include="XmlGen.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
