Add minimum InputLyrics

--- a/src/muxml_maker/muxml_maker.fsproj
+++ b/src/muxml_maker/muxml_maker.fsproj
@@ -67,6 +67,7 @@
     <Compile Include="Dict.fs" />
     <Compile Include="Lyrics.fs" />
     <Compile Include="Parser.fs" />
+    <Compile Include="InputLyrics.fs" />
     <Compile Include="XmlGen.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
