--- a/src/muxml_maker/muxml_maker.fsproj
+++ b/src/muxml_maker/muxml_maker.fsproj
@@ -47,6 +47,9 @@
     <Reference Include="FParsecCS">
       <HintPath>..\packages\FParsec\lib\net40-client\FParsecCS.dll</HintPath>
     </Reference>
+    <Reference Include="FSharp.Configuration">
+      <HintPath>..\packages\FSharp.Configuration\lib\net40\FSharp.Configuration.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
