Rename solution to MuxmlMaker and the project to MuxmlMaker.Console

--- a/src/MuxmlMaker.Console/MuxmlMaker.Console.fsproj
+++ b/src/MuxmlMaker.Console/MuxmlMaker.Console.fsproj
@@ -7,12 +7,12 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>1b89edb5-c6ba-46f9-825d-9f4656aa4d13</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>muxml_maker</RootNamespace>
-    <AssemblyName>muxml_maker</AssemblyName>
+    <RootNamespace>MuxmlMaker.Console</RootNamespace>
+    <AssemblyName>MuxmlMaker.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
-    <Name>muxml_maker</Name>
+    <Name>MuxmlMaker.Console</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -23,7 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Debug\muxml_maker.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\MuxmlMaker.Console.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -34,7 +34,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Release\muxml_maker.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\MuxmlMaker.Console.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
@@ -88,7 +88,7 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
