Move code to Core project

--- a/src/MuxmlMaker.Core/MuxmlMaker.Core.fsproj
+++ b/src/MuxmlMaker.Core/MuxmlMaker.Core.fsproj
@@ -44,6 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Utility.fs" />
+    <Compile Include="Types.fs" />
+    <Compile Include="Settings.fs" />
+    <Compile Include="Lyrics.fs" />
+    <Compile Include="Parser.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
